initial completion of sitetext and translate ability

--- a/client/main.html
+++ b/client/main.html
@@ -18,13 +18,13 @@
 			</div>
 			<div id="navbar" class="collapse navbar-collapse navbar-right">
 				<ul class="nav navbar-nav">
-					<li class="{{active 'quran'}}"><a href="/quran">Quran</a></li>
-					<li class="inactive"><a>Hadith</a></li>
-					<li class="inactive"><a>Scholars</a></li>
-					<li class="inactive"><a>Books</a></li>
-					<li class="inactive"><a>Articles</a></li>
-					<li class="inactive"><a>Quotes</a></li>
-					<li class="{{active 'tools'}}"><a href="/tools">Tools</a></li>
+					<li class="{{active 'quran'}}"><a href="/quran">{{t 'mqu'}}</a></li>
+					<li class="inactive"><a>{{t 'mha'}}</a></li>
+					<li class="inactive"><a>{{t 'msc'}}</a></li>
+					<li class="inactive"><a>{{t 'mbo'}}</a></li>
+					<li class="inactive"><a>{{t 'mar'}}</a></li>
+					<li class="inactive"><a>{{t 'mqo'}}</a></li>
+					<li class="{{active 'tools'}}"><a href="/tools">{{t 'mto'}}</a></li>
 					{{> langButtons }}
 					{{> loginButtons }}
 				</ul>
@@ -39,19 +39,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 center copy">
-                    <p>©2016 <a href="http://ussunnah.org">us-Sunnah Foundation</a></p>
+                    <p>©2016 <a href="http://ussunnah.org">{{t 'usf'}}</a></p>
                 </div>
 				<div class="col-md-4 center links">
 					<p>
-						<a href="/about" class="{{active 'about'}}"> About </a> <span class="sep"> • </span>
-						<a href="/contact" class="{{active 'contact'}}"> Contact </a> <span class="sep"> • </span>
-						<a href="/terms" class="{{active 'terms'}}"> Terms </a> <span class="sep"> • </span>
-						<a href="/policy" class="{{active 'policy'}}"> Policy </a>
+						<a href="/about" class="{{active 'about'}}"> {{t 'mab'}} </a> <span class="sep"> • </span>
+						<a href="/contact" class="{{active 'contact'}}"> {{t 'mco'}} </a> <span class="sep"> • </span>
+						<a href="/terms" class="{{active 'terms'}}"> {{t 'mte'}} </a> <span class="sep"> • </span>
+						<a href="/policy" class="{{active 'policy'}}"> {{t 'mpo'}} </a>
 					</p>
                 </div>
 				<div class="col-md-4 center social">
 					<ul class="social-icons icon-circle list-unstyled list-inline">
-						<li><span class="follow">Follow us on:</span></li>
+						<li><span class="follow">{{t 'fuo'}}</span></li>
 						<li><a href="https://www.facebook.com/ussunnah"><i class="fa fa-facebook"></i></a> </li>
 						<li><a href="http://twitter.com/ussunnah"><i class="fa fa-twitter"></i></a> </li>
 					</ul>
